--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,19 @@
     "description": "学習記録ツイート用拡張機能",
     "version": "1.0.0",
     "manifest_version": 2,
-    "permissions": ["storage"],
+    "permissions": [
+        "storage",
+        "background"
+    ],
     "browser_action": {
         "default_icon": {
             "16": "img/study.png"
         },
         "default_popup": "index.html"
+    },
+    "background": {
+        "scripts": [
+            "background.js"
+        ]
     }
   }
